[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/spaceship/Spaceship.tscn" type="PackedScene" id=1]
[ext_resource path="res://shared/state/MouseFollowState.gd" type="Script" id=2]
[ext_resource path="res://shared/combat/Health.gd" type="Script" id=3]
[ext_resource path="res://scenes/spaceship/PlayerShip.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[node name="PlayerShip" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MouseFollowState" type="Node" parent="."]
script = ExtResource( 2 )
body_path = NodePath("..")

[node name="Health" type="Node" parent="."]
script = ExtResource( 3 )
max_health = 3

[node name="Spaceship" parent="." instance=ExtResource( 1 )]
collision_layer = 8

[node name="LaserSpawner" parent="Spaceship" index="4"]
spawn_delay = 0.3
[connection signal="zero_health" from="Health" to="." method="_on_Health_zero_health"]
[connection signal="damaged" from="Spaceship" to="Health" method="reduce"]

[editable path="Spaceship"]
